# SPINO

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
docs/: DEVELOPMENT.md  attribution.md  composition.md  cs_amp.md  diode.md  future_work.md  inverter_chain.md  nfet.md  ota_5t.md  ota_composition.md  pfet.md  rc.md  related_work.md  results.md  sizing.md
docs/assets/: README.md
lab/: README.md
lab/circuit/: circuit_next_steps.md  circuit_status.md  inverter_chain_status.md  ota_status.md
lab/diode/: diode_next_steps.md  diode_status.md
lab/mosfet/: mosfet_next_steps.md  mosfet_status.md
lab/project/: project_next_steps.md  project_status.md
scripts/: cache_spice_iv.py  generate_doc_plots.py  run_inv_chain_matrix.py  s10_triode_grid.py  s11_collect_spice_training_set.py  s11_seed_variance.py  s11_three_way_compare.py  s11_train_uhlmann_surrogate.py  s11_uhlmann_adam.py  s8_aggregate_mlp_ablation.py  setup_pdk.sh  test_mosfet_invariance.py  test_nfet_invariance.py
spino/: archive.py  attribution.ipynb  config.py  constants.py  export_docs_figures.py  loss.py  ota_pfet_triode_attribution.ipynb  plot_styles.py  simple_rc.py  solvers.py  spice.py  spice_benchmark.py  utils.py
spino/circuit/: __init__.py  chain_composition.py  chain_metrics.py  characterize.py  characterize_ota.py  compose.py  compose_chain.py  compose_ota.py  composition.py  composition_io.py  composition_mlp_adapter.py  devices.py  error_attribution.py  hybrid_mosfet.py  (+16 more)
tests/: test_mosfet_mlp.py
(+94 files in other folders)
