[tool.poetry]
name = "SPINO"
version = "0.1.0"
description = "SPIce Neural Operator development"
authors = ["Austin Rhodes <a18rhodes@gmail.com>"]
readme = "README.md"
packages = [{ include = "spino" }]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.9.1"
neuraloperator = "^2.0.0"
scipy = "^1.17.0"
matplotlib = "^3.10.8"
numpy = "^2.4.1"
jupyter = "^1.1.1 "
ipykernel = "^7.1.0"
tensorboard = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = { extras = ["jupyter"], version = "^25.12.0" }
pylint = "^4.0.4"
isort = "^7.0.0"
mypy = "^1.19.1"
jupyterlab = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=spino --cov-report=term-missing"
